...
            app:layout_constraintEnd_toEndOf="@id/textUsername"
            app:layout_constraintStart_toStartOf="@id/textUsername"
            app:layout_constraintTop_toBottomOf="@id/textUsername"
            tools:text="Member" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonViewPosts"
            style="@style/Widget.COMP2100.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_posts"
            app:layout_constraintStart_toStartOf="@id/textUsername"
...
