...
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:paddingBottom="24dp"
    tools:context=".UserPostsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/userPostsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
...
